Backed out changeset 468cfeb51f7b (bug 1926979) for causing bc failures @ browser_914138_widget_API_overflowable_toolbar.js

--- a/browser/themes/shared/browser-shared.css
+++ b/browser/themes/shared/browser-shared.css
@@ -53,7 +53,7 @@ body {
 
     /* stylelint-disable-next-line media-query-no-invalid */
     @media (-moz-bool-pref: "sidebar.verticalTabs") {
-      min-width: 732px;
+      min-width: 800px;
 
       @media (-moz-platform: macos) {
         min-width: 670px;
